--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.1'
+
+    // Tesseract
+    implementation 'com.rmtheis:tess-two:9.1.0'
 }
