--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,16 +3,15 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 28
     buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "com.example.test_ml_kit"
         minSdkVersion 16
-        targetSdkVersion 30
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -35,6 +34,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.1'
 
-    // Tesseract
-    implementation 'com.rmtheis:tess-two:9.1.0'
+    // Tesseract model v4
+    implementation 'cz.adaptech.android:tesseract4android:2.1.0'
 }
