--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.test_ml_kit"
-        minSdkVersion 24
+        minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -40,6 +40,6 @@ dependencies {
     implementation 'cz.adaptech.android:tesseract4android:2.1.0'
 
     // Required for hocr4j library code
-    implementation group: 'com.google.guava', name: 'guava', version: '23.5-jre'
+    implementation 'com.google.guava:guava:23.2-android'
     implementation 'org.apache.commons:commons-text:1.6'
 }
